--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="about" class="animate">
       <h2>About Me</h2>
       <div class="about-container">
-        <img src="/home/sploitable/Downloads/kashy.jpg" alt="Isaac's Photo" class="profile-pic">
+        <img src="assets/images/kashy.jpg" alt="Isaac's Photo" class="profile-pic">
         <p>Hello! I'm Isaac Karanja, a software developer with a deep interest in solving real-world problems using technology. I enjoy building intuitive web applications and exploring new tech trends that push boundaries.</p>
       </div>
     </section>
